<resources>
    <string name="app_name">Praktikum15-Kalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="kosong">0</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>

</resources>
